<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    android:weightSum="15.5">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/gray1">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|bottom"
            android:visibility="visible"
            tools:ignore="MissingConstraints"
            android:layout_centerInParent="true"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            app:civ_border_overlay="true"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.5"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="11"
            android:orientation="vertical"
            android:layout_margin="@dimen/Margin20">
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_height="@dimen/edit_text_height"
                android:background="@drawable/edittixtstyle"
                android:drawableRight="@drawable/ic_action_person"
                android:hint="name"
                android:textSize="@dimen/normal_text"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:layout_margin="4dp"
                android:inputType="textPersonName"/>
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_height="@dimen/edit_text_height"
                android:background="@drawable/edittixtstyle"
                android:drawableRight="@drawable/ic_action_phone"
                android:hint="phone"
                android:textSize="@dimen/normal_text"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:inputType="phone"
                android:layout_margin="4dp"/>
            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_weight="2"
                android:textSize="@dimen/normal_text"
                android:background="@drawable/edittixtstyle"
                android:drawableRight="@drawable/ic_action_email"
                android:hint="Email"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:inputType="textEmailAddress"
                android:layout_margin="4dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_weight="2"
                android:textSize="@dimen/normal_text"
                android:background="@drawable/edittixtstyle"
                android:drawableRight="@drawable/ic_action_lock"
                android:inputType="textPassword"
                android:hint="password"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:layout_margin="4dp"
                />
            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textAppearance="?android:textAppearanceMedium" />
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="2">

                <Button
                    android:id="@+id/SignUp"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:padding="@dimen/padding"
                    android:text="@string/signup_text"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/normal_text"
                    android:textStyle="bold"
                    android:onClick="signInNow"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/to_signin"
                    android:onClick="goToSignIn"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/small_text"

                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </LinearLayout>

</LinearLayout>